# sparsity-research

./: .gitignore  README.md  bfcl_server.py  characterize.py  characterize_moe.py  convert_ct_to_bf16.py  plot.py  plot_bfcl.py  plot_compare_llama31.py  plot_expr3.py  plot_ppl_sweep.py  plot_signals.py  plot_tau2.py  reorder_test.py  requirements-bfcl.txt  requirements-research.txt  run_bfcl.sh  run_oracle.py  run_oracle_moe.py  run_oracle_quant.py  run_ppl_sweep.py  run_ranking_stability.py  run_tau2.sh  run_zeroshot.py  tau2_score.py  viz_activation_layout.py
benchmarks/bfcl/: _bfcl_cli.py  final_plot.py  gemma4_handler.py  plot.py  requirements.txt  run.sh  run_vllm.sh  sweep.sh  sweep_plot.py
benchmarks/tau2/: _tau2_cli.py  make_subsets.py  plot.py  run.sh  run_vllm.sh  score.py  server.py
results/: SUMMARY.md  SUMMARY_bfcl.md  SUMMARY_expr3.md  SUMMARY_tau2.md  moe_expert_headroom.npz  oracle_gateonly.csv  oracle_llama2-7b.csv  oracle_llama31-8b.csv  oracle_moe.csv  oracle_moe_high.csv  oracle_quant.csv  ranking_stability.csv  ranking_stability_perlayer.npz  sparsity_headroom.npz  sparsity_headroom_llama31-8b.npz  zeroshot_llama31-8b.csv
results/ppl_sweep/: SUMMARY.md  gemma4-12b-bf16.csv  gemma4-12b-int4.csv  qwen3-8b-bf16.csv  (+1 more)
src/: __init__.py  actsparse.py  data.py  eval_ppl.py  moe.py
vllm_actsparse_plugin/: pyproject.toml
vllm_actsparse_plugin/vllm_actsparse/: __init__.py
vulcan/: bfcl_sweep.slurm  env.sh  max_prompt_len.py  probe_vram.py  setup.sh  tau2_sweep.slurm  tau2_vllm_array.slurm  tau2_vllm_plot.slurm  tau2_vllm_sweep.slurm
(+7 files in other folders)
